--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -35,8 +35,8 @@
 %% 
 %% ------------------------------------------------------------------------
 %% 
-\NeedsTeXFormat{LaTeX2e}[2025-06-01]
-\ProvidesExplPackage {enumext} {2025-10-06} {1.9} {Enumerate exercise sheets}
+\NeedsTeXFormat{LaTeX2e}[2025-11-01]
+\ProvidesExplPackage {enumext} {2025-11-01} {1.9} {Enumerate exercise sheets}
 \hook_gput_code:nnn {begindocument} {enumext}
   {
     \IfPackageLoadedTF { multicol }
@@ -45,7 +45,7 @@
       }
       {
         \msg_info:nnn { enumext } { package-not-load } { multicol }
-        \RequirePackage{multicol}[2025-05-25]
+        \RequirePackage{multicol}[2025-06-05]
       }
   }
 %% Variable for levels and nesting off all environments and |\anskey|, |anskey*|.
@@ -4043,6 +4043,7 @@
         \clist_map_inline:nn { beginparpenalty, itempenalty, endparpenalty }
           { \int_set_eq:cc {@####1} { l__enumext_####1_#1_int } }
         \usecounter { enumX#1 }
+        \setcounter { enumX#1 } { \int_eval:n { \int_use:c { l__enumext_start_#1_int } - 1 } }
         \str_if_eq:nnTF {#1} { v }
           {
             \__enumext_keyans_redefine_item:
@@ -4090,6 +4091,7 @@
         \skip_set_eq:Nc \parsep  { l__enumext_itemsep_#1_skip }
         \skip_zero:N \partopsep
         \usecounter { enumX#1 }
+        \setcounter { enumX#1 } { \int_eval:n { \int_use:c { l__enumext_start_#1_int } - 1 } }
         \__enumext_starred_ref:
         \str_if_eq:nnTF {#1} { vii }
           {
@@ -4292,14 +4294,6 @@
           }
       }
   }
-%% Set start value for counter in |enumext| environment.
-\cs_new_protected:Nn \__enumext_start_counter:
-  {
-    \setcounter { enumX \__enumext_level: }
-      {
-        \int_eval:n { \int_use:c { l__enumext_start_ \__enumext_level: _int } - 1 }
-      }
-  }
 %% Definition of |enumext| environment.
 \NewDocumentEnvironment{enumext}{ O{} }
   {
@@ -4313,7 +4307,6 @@
         \use:c { __enumext_list_arg_two_ \__enumext_level: : }
         \__enumext_before_keys_exec:
       }
-    \__enumext_start_counter:
     \__enumext_set_item_width:
     \__enumext_after_args_exec:
   }
@@ -4441,11 +4434,6 @@
         \dim_sub:Nn \itemwidth { \l__enumext_listoffset_v_dim }
       }
   }
-%% Start counter for |keyans| environment.
-\cs_new_protected:Nn \__enumext_keyans_start_counter:
-  {
-    \setcounter { enumXv } { \int_eval:n { \int_use:c { l__enumext_start_v_int } - 1 } }
-  }
 %% Definition of |keyans| environment.
 \NewDocumentEnvironment{keyans}{ O{} }
   {
@@ -4458,7 +4446,6 @@
         \__enumext_list_arg_two_v:
         \__enumext_before_keys_exec_v:
       }
-    \__enumext_keyans_start_counter:
     \__enumext_keyans_set_item_width:
     \__enumext_after_args_exec_v:
   }
@@ -5180,7 +5167,6 @@
         \__enumext_list_arg_two_vii:
         \__enumext_before_keys_exec_vii:
       }
-    \setcounter { enumXvii } { \int_eval:n { \int_use:c { l__enumext_start_vii_int } - 1 } }
     \IfDocumentMetadataT { \tag_suspend:n {enumext*} }
     \__enumext_starred_columns_set_vii:
     \item[] \scan_stop:
@@ -5465,7 +5451,6 @@
         \__enumext_list_arg_two_viii:
         \__enumext_before_keys_exec_viii:
       }
-    \setcounter { enumXviii } { \int_eval:n { \int_use:c { l__enumext_start_viii_int } - 1 } }
     \IfDocumentMetadataT { \tag_suspend:n {keyans*} }
     \__enumext_starred_columns_set_viii:
     \item[] \scan_stop:
