--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -4458,7 +4458,7 @@
 \socket_new_plug:nnn {tagsupport/__enumext/starred} {start-list-tags}
   {
     \tag_resume:n {#1}
-    \tag_mc_end_push:
+    %%\tag_mc_end_push:
       \tag_struct_begin:n {tag=LI}
         \tag_struct_begin:n {tag=Lbl}
            \tag_mc_begin:n {tag=Lbl}
@@ -4477,7 +4477,7 @@
           \tag_struct_end:n {tag=text-unit}
         \tag_struct_end:n {tag=LBody}
       \tag_struct_end:n {tag=LI}
-    \tag_mc_begin_pop:n {}
+    %%\tag_mc_begin_pop:n {}
     \tag_suspend:n {#1}
   }
 %% Wrap socket in conditional functions for tagging |enumext*| and |keyans*| environments.
@@ -4510,7 +4510,7 @@
 \socket_new_plug:nnn {tagsupport/__enumext/keyanspic} {start-list-tags}
   {
     \tag_resume:n {keyanspic}
-    \tag_mc_end_push:
+    %%\tag_mc_end_push:
       \tag_struct_begin:n {tag=LI}
         \tag_struct_begin:n {tag=Lbl}
           \tag_mc_begin:n {tag=Lbl}
@@ -4531,7 +4531,7 @@
           \tag_struct_end:n {tag=text-unit}
         \tag_struct_end:n {tag=LBody}
       \tag_struct_end:n {tag=LI}
-    \tag_mc_begin_pop:n {}
+    %%\tag_mc_begin_pop:n {}
     \tag_suspend:n {keyanspic}
   }
 %% Wrap socket in conditional functions for tagging |keyanspic| environment.
@@ -4681,7 +4681,7 @@
       {
         \tag_resume:n {keyanspic}
         \tag_mc_end_push:
-        \tag_struct_begin:n {tag=L,attribute=enumerate}
+        %%\tag_struct_begin:n {tag=L,attribute=enumerate}
       }
     \__enumext_anspic_exec:
     \IfDocumentMetadataT
@@ -4691,7 +4691,7 @@
     \end{list}
     \IfDocumentMetadataT
       {
-        \tag_struct_end:n {tag=L}
+        %%\tag_struct_end:n {tag=L}
         \tag_mc_begin_pop:n {}
         \tag_struct_end:n {tag=L}
         \tag_mc_begin_pop:n {}
