--- a/sources/enumext.dtx
+++ b/sources/enumext.dtx
@@ -5749,6 +5749,7 @@ Some text here
 %    \begin{itemize}
 %      \item Update requirement to \hologo{LaTeX} release 2025-11-01.
 %      \item Move |\setcounter| to |\begin{list}|\mymarg{arg one}|{|\mymeta{arg two}|\setcounter}|.
+%      \item Update code for \emph{tagged} \texttt{PDF}.
 %    \end{itemize}
 %  \item [v1.8 (ctan), 2025-10-04]
 %    \begin{itemize}
@@ -13756,7 +13757,6 @@ Some text here
 \socket_new_plug:nnn {tagsupport/@@/starred} {start-list-tags}
   {
     \tag_resume:n {#1}
-    %%\tag_mc_end_push:
       \tag_struct_begin:n {tag=LI}
         \tag_struct_begin:n {tag=Lbl}
            \tag_mc_begin:n {tag=Lbl}
@@ -13775,7 +13775,6 @@ Some text here
           \tag_struct_end:n {tag=text-unit}
         \tag_struct_end:n {tag=LBody}
       \tag_struct_end:n {tag=LI}
-    %%\tag_mc_begin_pop:n {}
     \tag_suspend:n {#1}
   }
 %    \end{macrocode}
@@ -13827,7 +13826,6 @@ Some text here
 \socket_new_plug:nnn {tagsupport/@@/keyanspic} {start-list-tags}
   {
     \tag_resume:n {keyanspic}
-    %%\tag_mc_end_push:
       \tag_struct_begin:n {tag=LI}
         \tag_struct_begin:n {tag=Lbl}
           \tag_mc_begin:n {tag=Lbl}
@@ -13848,7 +13846,6 @@ Some text here
           \tag_struct_end:n {tag=text-unit}
         \tag_struct_end:n {tag=LBody}
       \tag_struct_end:n {tag=LI}
-    %%\tag_mc_begin_pop:n {}
     \tag_suspend:n {keyanspic}
   }
 %    \end{macrocode}
@@ -14166,7 +14163,7 @@ Some text here
     \IfDocumentMetadataT
       {
         \tag_resume:n {keyanspic}
-        \tag_tool:n {para/tagging=false}
+        \tag_tool:n {para/tagging=false} % no socket for this now
         \tag_suspend:n {keyanspic}
       }
   }
@@ -14179,8 +14176,6 @@ Some text here
     \IfDocumentMetadataT
       {
         \tag_resume:n {keyanspic}
-        \tag_mc_end_push:
-        %%\tag_struct_begin:n {tag=L,attribute=enumerate}
       }
     \@@_anspic_exec:
     \IfDocumentMetadataT
@@ -14190,10 +14185,7 @@ Some text here
     \end{list}
     \IfDocumentMetadataT
       {
-        %%\tag_struct_end:n {tag=L}
-        \tag_mc_begin_pop:n {}
         \tag_struct_end:n {tag=L}
-        \tag_mc_begin_pop:n {}
       }
 %    \end{macrocode}
 %   Finally we check if \ics*{anspic*} has been used, set the counter |enumXvi|
